--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	Hello world!
-</body>
+<html lang="ru">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>ДЗ №1</title>
+	</head>
+	<body>
+		<header>
+			<img src="./img/wpdmn_logo.jpeg" alt="WayUP logo" />
+			<h1>Вступление H1</h1>
+			<p>Это текст моего первого домашнего задания</p>
+			<p>Не верится, но мне уже удается писать совй первый код на HTML.</p>
+		</header>
+		<section>
+			<h2>Что дальше? H2</h2>
+			<p>
+				Дальше, я буду получать все больше и больше опыта в разработке сайтов, чтобы достичь новых вершин! 
+				<a href="http://google.com.ru" target="_blank" title="Прочитать больше в Google">Прочитать больше в Google</a>
+			</p>
+		</section>
+		<section>
+			<h2>Что я буду уметь? H2</h2>
+			<p>Я смогу создавать вот такие замечательные формы:</p>
+			<form action="#">
+				<input type="text" placeholder="Имя" required name="name" />
+				<input type="email" placeholder="E-mail" required name="email" />
+				<input type="tel" placeholder="Телефон" required name="phone" />
+				<button type="submit">Отправить форму</button>
+				<p>А также, я научусь создавать списки:</p>
+				<ul>
+					<li>С одним пунктом</li>
+					<li>С несколькими пунктами</li>
+					<li>И даже с тремя отдельными пунктами</li>
+				</ul>
+			</form>
+		</section>
+		<section>
+			<h2>Отличное начало! H2</h2>
+			<a href="https://my.wayup.in/lesson/3011" target="_blank">Перейти на страницу первого занятия курса</a>
+		</section>
+
+	</body>
 </html>
