--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
 				<input type="email" placeholder="E-mail" required name="email" />
 				<input type="tel" placeholder="Телефон" required name="phone" />
 				<button type="submit">Отправить форму</button>
+			</form>				
 				<p>А также, я научусь создавать списки:</p>
 				<ul>
 					<li>С одним пунктом</li>
 					<li>С несколькими пунктами</li>
 					<li>И даже с тремя отдельными пунктами</li>
 				</ul>
-			</form>
 		</section>
-		<section>
+		<footer>
 			<h2>Отличное начало! H2</h2>
 			<a href="https://my.wayup.in/lesson/3011" target="_blank">Перейти на страницу первого занятия курса</a>
-		</section>
+		</footer>
 
 	</body>
 </html>
