--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>ДЗ №1</title>
+		<title>ДЗ №2</title>
+		<link rel="stylesheet" href="./css/main.css">
 	</head>
 	<body>
 		<header>
 			<img src="./img/wpdmn_logo.jpeg" alt="WayUP logo" />
 			<h1>Вступление H1</h1>
-			<p>Это текст моего первого домашнего задания</p>
-			<p>Не верится, но мне уже удается писать совй первый код на HTML.</p>
+			<p class="second">Это текст моего второго домашнего задания</p>
+			<p>Не верится, но мне уже удается писать свой <span class="marked">первый код на HTML.</span></p>
 		</header>
 		<section>
 			<h2>Что дальше? H2</h2>
@@ -21,8 +22,8 @@
 			</p>
 		</section>
 		<section>
-			<h2>Что я буду уметь? H2</h2>
-			<p>Я смогу создавать вот такие замечательные формы:</p>
+			<h2 class="competence">Что я буду уметь? H2</h2>
+			<p  class="good-forms">Я смогу создавать вот такие замечательные формы:</p>
 			<form action="#">
 				<input type="text" placeholder="Имя" required name="name" />
 				<input type="email" placeholder="E-mail" required name="email" />
