--- a/lesson-4-hw/index.html
+++ b/lesson-4-hw/index.html
@@ -20,7 +20,7 @@
             <div class="wrapper">
                 <div class="offer">
                     <h1 class="title">
-                        С помощью верстки <br>я создам ту жизнь, о которой <span>мечтаю!</span>
+                        С помощью верстки <br>я создам ту жизнь, о которой<br><span>мечтаю!</span>
                     </h1>
                     <p class="intro">
                         Мои стремления + настойчивость позволят мне достичь чего угодно. Я не верю в это. Я знаю это на
